# ros2_yolo_camera_based_crater_detection

./: README.md  frames_2025-04-21_20.52.41.gv
src/mars_rover/: package.xml  setup.py
src/mars_rover/config/: mapper_params_online_async.yaml  mars_rover_controllers.yaml
src/mars_rover/launch/: sim_launch.py  urdf.rviz
src/mars_rover/rviz/: mars_rover.rviz
src/mars_rover/urdf/: robot.urdf.xacro
src/mars_rover/worlds/: mars.world
src/nav2_config/: my_nav2_params.yaml
src/yolo_crater_detector/: package.xml  setup.cfg  setup.py
src/yolo_crater_detector/launch/: yolo_crater_detector.launch.py
src/yolo_crater_detector/yolo_crater_detector/: detector_node.py
