<?xml version="1.0"?>
<package format="3">
  <name>yolo_crater_detector</name>
  <version>0.0.0</version>
  <description>YOLO crater detection from camera feed</description>
  <maintainer email="ankith@todo.todo">ankith</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>ultralytics</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

